# synsepalum-dulcificum

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.py
.github/workflows/: apply-cpp-linter.yml  conan-package.yml  lint-formatter.yml  lint-poster.yml  lint-tidier.yml  npm-package.yml  package.yml  unit-test.yml
DulcificumJS/: CMakeLists.txt  DulcificumJS.cpp  README.md  package-lock.json  package.json
DulcificumJS/cpp/: CMakeLists.txt  DulcificumJS.cpp
DulcificumJS/src/: index.ts
apps/: CMakeLists.txt  cmdline.h  translator_main.cpp
doc/: griffin.puml
include/: command_types.cpp  command_types.h  dulcificum.h
include/dulcificum/: command_types.h  state.h
include/dulcificum/gcode/: gcode_to_command.h  parse.h
include/dulcificum/gcode/ast/: acceleration.h  ast.h  bed_temperature.h  comment_commands.h  delay.h  entry.h  extruder_temperature.h  fan.h  g0.h  g1.h  position.h  positioning_mode.h  purge.h  rules.h  toolchange.h  translate.h
include/dulcificum/gcode/ast/words/: G0.h  G1.h  command.h  comment.h  entry.h  optional_values.h  words.h
include/dulcificum/miracle_jtp/: mgjtp_command_file_stream.h  mgjtp_command_stream.cpp  mgjtp_command_stream.h  mgjtp_command_to_json.h  mgjtp_file_stream.h  mgjtp_json_to_command.h  mgjtp_mappings_json_key_to_str.h
include/dulcificum/proto_path/: translate.h
include/dulcificum/proto_path/ast/: ast.h  translate.h
include/dulcificum/utils/: char_range_literal.h  io.h  string_convert.h  svtod.h
jsDulcificum/: CMakeLists.txt  jsDulcificum.cpp  package.json  tsconfig.json
jsDulcificum/src/: index.ts
pyDulcificum/: CMakeLists.txt  pyDulcificum.cpp
src/: CMakeLists.txt  blank.cpp  blank.h  command_types.cpp  makerbot_dialect.cpp  makerbot_dialect.h  miraclegrue_jsontoolpath_dialect.cpp  miraclegrue_jsontoolpath_dialect.h
src/gcode/: gcode_to_command.cpp  parse.cpp
src/gcode/ast/: ast.cpp  entries.cpp  operators.cpp
src/miracle_jtp/: mgjtp_command_file_stream.cpp  mgjtp_command_stream.cpp  mgjtp_command_to_json.cpp  mgjtp_file_stream.cpp  mgjtp_json_to_command.cpp  mgjtp_mappings_json_key_to_str.cpp
src/miraclegrue_jsontoolpath_dialect/: CMakeLists.txt  mgjtp_command_to_json.cpp  mgjtp_command_to_json.h  mgjtp_io.cpp  mgjtp_io.h  mgjtp_json_to_command.cpp  mgjtp_json_to_command.h  mgjtp_mappings_json_key_to_str.h
src/proto_path/: translate.cpp
src/utils/: io.cpp  svtod.cpp
templates/: cmdline.h.jinja
test/: CMakeLists.txt  miracle_jsontoolpath_dialect_test.cpp  test_data_dir.h  test_data_dir.h.in
test/data/: cal.jsontoolpath  cmd_example.json
test_package/: conanfile.py  test.py
tests/: CMakeLists.txt  dulcificum_unit_tester.cpp  miracle_jsontoolpath_dialect_test.cpp
